# agentic-environmental-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  GITHUB_PAGES_SETUP.md  README.md  main.py  pyproject.toml  streamlit_app.py
docs/: AGENTIC_ARCHITECTURE.md  MCP_INTEGRATION.md  _config.yml  architecture.md  changelog.md  index.md
docs/images/: .gitkeep
infra/: Dockerfile.agent  Dockerfile.mcp_ea_env  docker-compose.yml
infra/db-init/: neo4j-schema.cypher  pgvector.sql
mcp_servers/: README.md  ea_env_server.py
scripts/: check_rainfall_stations.py  count_flood_stations.py  debug_rainfall.py  run_agent.py  sync_stations.py  test_anomaly_flow.py  test_flood_hydro_permits.py  test_hydrology_client.py  test_incident_service.py  test_mcp_server.py  test_mcp_tools.py  test_neo4j.py  test_rag.py  test_rag_search.py  test_rainfall_client.py  test_rainfall_simple.py  view_run_logs.py  visualize_graph.py
src/defra_agent/: config.py
src/defra_agent/agent/: graph.py  main.py  mcp_graph.py
src/defra_agent/domain/: anomaly_detector.py  clustering.py  models.py
src/defra_agent/services/: incident_service.py  summariser.py
src/defra_agent/storage/: mongo_repo.py  neo4j_repo.py  pgvector_repo.py  run_log_repo.py  station_repo.py
src/defra_agent/tools/: flood_client.py  hydrology_client.py  mcp_tools.py  public_registers_client.py  rainfall_client.py
tests/: test_flood_client.py
